Update maven plugin